--- a/src/components/order-form/order-form.scss
+++ b/src/components/order-form/order-form.scss
@@ -1,25 +1,11 @@
-@import
-"~minx/src/settings",
-"~minx/src/functions",
-"~minx/src/mixins";
-
-//===================================================================
-//  ORDER-FORM
-//===================================================================
-
-.form-label-adjacent {
-    vertical-align: top;
-    display: inline-block;
-    margin: 5px;
-    min-width: 100px;
-    width: 140px;
-    font-size: rem(16px);
+@import '../../../ng2-material/core/style/variables';
+@import '../../../ng2-material/core/style/mixins';
+@import '../../../ng2-material/core/style/default-theme';
+md-toolbar[md-hero] {
+  margin-bottom: 40px;
 }
-
-.form-field-adjacent {
-    vertical-align: top;
-    display: inline-block;
-    white-space: normal;
-    width: 331px;
-    font-size: rem(16px);
+.secret-project {
+  width: 256px;
+  height: 256px;
+  fill: white;
 }
