--- a/src/components/order-form/order-form.html
+++ b/src/components/order-form/order-form.html
@@ -5,47 +5,41 @@
   <md-content layout-padding>
     <form [ngFormModel]="projectForm">
       <md-input-container class="md-block">
-        <label for="description">Description</label>
-        <input md-input ngControl="description" id="description" [(value)]="model.description">
-        <div md-messages="description">
-          <div md-message="required">This is required.</div>
-          <div md-message="maxlength">The name has to be less than 30 characters long.</div>
-        </div>
-      </md-input-container>
-      <md-input-container class="md-block">
-        <label for="clientName">Client Name</label>
+        <label for="clientName">Name</label>
         <input md-input ngControl="clientName" id="clientName" [(value)]="model.clientName">
         <div md-messages="clientName" role="alert">
           <div md-message="required">This is required.</div>
         </div>
       </md-input-container>
       <md-input-container class="md-block">
-        <label for="clientEmail">Client Email</label>
+        <label for="clientEmail">Email</label>
         <input md-input type="email" ngControl="clientEmail" id="clientEmail" [(value)]="model.clientEmail"/>
         <div md-messages="clientEmail" role="alert">
           <div md-message>Your email must be between 10 and 100 characters long and look like an e-mail address.</div>
         </div>
       </md-input-container>
       <md-input-container class="md-block">
-        <label for="rate">Hourly Rate (USD)</label>
-        <input md-input type="number" step="any" ngControl="rate" id="rate" [(value)]="model.rate" #rateInput/>
-        <div md-messages="rate" role="alert">
-          <div md-message="mdNumberRequired">
-            You've got to charge something! You can't just <b>give away</b> a Missile Defense
-            System.
-          </div>
-          <div md-message="mdMin">
-            You should charge at least $800 an hour. This job is a big deal... if you mess up,
-            everyone dies!
-          </div>
-          <div md-message="mdPattern">
-            You should charge exactly $1,234.
-          </div>
-          <div md-message="mdMax">
-            ${{rateInput.value}} an hour? That's a little ridiculous. I doubt event Bill Clinton could afford that.
-          </div>
+        <label for="clientPhone">ClientPhone</label>
+        <input md-input ngControl="clientPhone" id="clientPhone" [(value)]="model.clientPhone"/>
+        <div md-messages="clientPhone" role="alert">
+          <div md-message="required">This is required.</div>
         </div>
       </md-input-container>
+      <md-input-container class="md-block">
+        <label for="subject">Subject</label>
+        <input md-input ngControl="subject" id="subject" [(value)]="model.subject"/>
+        <div md-messages="subject" role="alert">
+          <div md-message="required">This is required.</div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <label for="message">Message</label>
+        <input md-input ngControl="message" id="message" [(value)]="model.message"/>
+        <div md-messages="message" role="alert">
+          <div md-message="required">This is required.</div>
+        </div>
+      </md-input-container>
+      
     </form>
     <strong>Model</strong>
     <pre class="md-padding">{{model | json}}</pre>
