--- a/src/components/order-form/order-form.scss
+++ b/src/components/order-form/order-form.scss
@@ -1,6 +1,10 @@
 @import '../../../ng2-material/core/style/variables';
 @import '../../../ng2-material/core/style/mixins';
 @import '../../../ng2-material/core/style/default-theme';
-md-toolbar[md-hero] {
+.md-toolbar[md-hero] {
   margin-bottom: 40px;
+}
+
+.order-form {
+    max-width: 600px
 }
