webpack changes MD WIP

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,7 +6,9 @@
 "~minx/src/functions",
 "~minx/src/mixins",
 "~minx/src/reset",
-"~minx/src/elements";
+"~minx/src/elements",
+"~ng2-material/dist/ng2-material.css",
+"~ng2-material/dist/font.css";
 
 @import
 "grid";
